--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -304,7 +304,7 @@
           <enum>QFrame::Sunken</enum>
          </property>
          <property name="text" >
-          <string>TextLabel</string>
+          <string></string>
          </property>
          <property name="indent" >
           <number>-1</number>
