--- a/src/OptionsDialog.ui
+++ b/src/OptionsDialog.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>257</width>
-    <height>489</height>
+    <width>251</width>
+    <height>371</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -16,123 +16,215 @@
    <item row="0" column="0" >
     <layout class="QVBoxLayout" >
      <item>
-      <widget class="QLabel" name="label" >
-       <property name="text" >
-        <string>Email:</string>
+      <widget class="QTabWidget" name="tabWidget" >
+       <property name="currentIndex" >
+        <number>0</number>
        </property>
-       <property name="buddy" >
-        <cstring>usernameLineEdit</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="usernameLineEdit" />
-     </item>
-     <item>
-      <widget class="QLabel" name="label_2" >
-       <property name="text" >
-        <string>Password:</string>
-       </property>
-       <property name="buddy" >
-        <cstring>passwordLineEdit</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="passwordLineEdit" >
-       <property name="echoMode" >
-        <enum>QLineEdit::Password</enum>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="savePasswordCheckBox" >
-       <property name="text" >
-        <string>save password</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_3" >
-       <property name="text" >
-        <string>Update interval:</string>
-       </property>
-       <property name="buddy" >
-        <cstring>intervalLineEdit</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="intervalLineEdit" />
-     </item>
-     <item>
-      <widget class="QCheckBox" name="useProxyCheckBox" >
-       <property name="text" >
-        <string>use proxy</string>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLabel" name="label_8" >
-       <property name="text" >
-        <string>Proxy address:</string>
-       </property>
-       <property name="buddy" >
-        <cstring>proxyAddressLineEdit</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="proxyAddressLineEdit" />
-     </item>
-     <item>
-      <widget class="QLabel" name="label_9" >
-       <property name="text" >
-        <string>Proxy port:</string>
-       </property>
-       <property name="buddy" >
-        <cstring>proxyPortLineEdit</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="proxyPortLineEdit" />
-     </item>
-     <item>
-      <widget class="QLabel" name="label_6" >
-       <property name="text" >
-        <string>Proxy username:</string>
-       </property>
-       <property name="buddy" >
-        <cstring>proxyUsernameLineEdit</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="proxyUsernameLineEdit" />
-     </item>
-     <item>
-      <widget class="QLabel" name="label_7" >
-       <property name="text" >
-        <string>Proxy password:</string>
-       </property>
-       <property name="buddy" >
-        <cstring>proxyPasswordLineEdit</cstring>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QLineEdit" name="proxyPasswordLineEdit" >
-       <property name="echoMode" >
-        <enum>QLineEdit::Password</enum>
-       </property>
-      </widget>
-     </item>
-     <item>
-      <widget class="QCheckBox" name="proxySavePasswordCheckBox" >
-       <property name="text" >
-        <string>save proxy password</string>
-       </property>
+       <widget class="QWidget" name="tab" >
+        <attribute name="title" >
+         <string>General</string>
+        </attribute>
+        <layout class="QGridLayout" >
+         <item row="0" column="0" >
+          <layout class="QVBoxLayout" >
+           <item>
+            <widget class="QLabel" name="label_3" >
+             <property name="text" >
+              <string>Update interval:</string>
+             </property>
+             <property name="buddy" >
+              <cstring>intervalLineEdit</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="intervalLineEdit" />
+           </item>
+           <item>
+            <widget class="QLabel" name="label_4" >
+             <property name="text" >
+              <string>Number of messages per page:</string>
+             </property>
+             <property name="buddy" >
+              <cstring>intervalLineEdit</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="messagesPerPageLineEdit" />
+           </item>
+           <item>
+            <spacer>
+             <property name="orientation" >
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" >
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="tab_2" >
+        <attribute name="title" >
+         <string>Connection</string>
+        </attribute>
+        <layout class="QGridLayout" >
+         <item row="0" column="0" >
+          <layout class="QVBoxLayout" >
+           <item>
+            <widget class="QCheckBox" name="useProxyCheckBox" >
+             <property name="text" >
+              <string>use proxy</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLabel" name="label_8" >
+             <property name="text" >
+              <string>Proxy address:</string>
+             </property>
+             <property name="buddy" >
+              <cstring>proxyAddressLineEdit</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="proxyAddressLineEdit" />
+           </item>
+           <item>
+            <widget class="QLabel" name="label_9" >
+             <property name="text" >
+              <string>Proxy port:</string>
+             </property>
+             <property name="buddy" >
+              <cstring>proxyPortLineEdit</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="proxyPortLineEdit" />
+           </item>
+           <item>
+            <widget class="QLabel" name="label_6" >
+             <property name="text" >
+              <string>Proxy username:</string>
+             </property>
+             <property name="buddy" >
+              <cstring>proxyUsernameLineEdit</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="proxyUsernameLineEdit" />
+           </item>
+           <item>
+            <widget class="QLabel" name="label_7" >
+             <property name="text" >
+              <string>Proxy password:</string>
+             </property>
+             <property name="buddy" >
+              <cstring>proxyPasswordLineEdit</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="proxyPasswordLineEdit" >
+             <property name="echoMode" >
+              <enum>QLineEdit::Password</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="proxySavePasswordCheckBox" >
+             <property name="text" >
+              <string>save proxy password</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer>
+             <property name="orientation" >
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" >
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
+       <widget class="QWidget" name="tab_3" >
+        <attribute name="title" >
+         <string>Authentication</string>
+        </attribute>
+        <layout class="QGridLayout" >
+         <item row="0" column="0" >
+          <layout class="QVBoxLayout" >
+           <item>
+            <widget class="QLabel" name="label" >
+             <property name="text" >
+              <string>Username or email:</string>
+             </property>
+             <property name="buddy" >
+              <cstring>usernameLineEdit</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="usernameLineEdit" />
+           </item>
+           <item>
+            <widget class="QLabel" name="label_2" >
+             <property name="text" >
+              <string>Password:</string>
+             </property>
+             <property name="buddy" >
+              <cstring>passwordLineEdit</cstring>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QLineEdit" name="passwordLineEdit" >
+             <property name="echoMode" >
+              <enum>QLineEdit::Password</enum>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="savePasswordCheckBox" >
+             <property name="text" >
+              <string>save password</string>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <spacer>
+             <property name="orientation" >
+              <enum>Qt::Vertical</enum>
+             </property>
+             <property name="sizeHint" >
+              <size>
+               <width>20</width>
+               <height>40</height>
+              </size>
+             </property>
+            </spacer>
+           </item>
+          </layout>
+         </item>
+        </layout>
+       </widget>
       </widget>
      </item>
      <item>
