Added Turkish translation, thanks to ugur.jnmbk
git-svn-id: http://qwit.googlecode.com/svn/trunk@23 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -6,5 +6,6 @@
         <file>images/qwit.png</file>
         <file>images/reload.png</file>
         <file>images/reply.png</file>
+        <file>var/qwit_tr_TR.qm</file>
     </qresource>
 </RCC>
