--- a/qwit.qrc
+++ b/qwit.qrc
@@ -8,5 +8,6 @@
         <file>images/reply.png</file>
         <file>translations/qwit_tr_TR.qm</file>
         <file>translations/qwit_ru_RU.qm</file>
+        <file>translations/qwit_en_US.qm</file>
     </qresource>
 </RCC>
