Added options "Username under avatar"
git-svn-id: http://qwit.googlecode.com/svn/trunk@43 067a171b-6953-0410-b330-3d32600bf046

--- a/src/OptionsDialog.ui
+++ b/src/OptionsDialog.ui
@@ -107,6 +107,16 @@
             </widget>
            </item>
            <item>
+            <widget class="QCheckBox" name="usernameUnderAvatarCheckBox" >
+             <property name="text" >
+              <string>Username under avatar</string>
+             </property>
+             <property name="checked" >
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item>
             <spacer>
              <property name="orientation" >
               <enum>Qt::Vertical</enum>
