--- a/qwit.qrc
+++ b/qwit.qrc
@@ -6,6 +6,7 @@
         <file>images/qwit.png</file>
         <file>images/reload.png</file>
         <file>images/reply.png</file>
+        <file>images/dms.png</file>
         <file>translations/qwit_tr_TR.qm</file>
         <file>translations/qwit_ru_RU.qm</file>
         <file>translations/qwit_en_US.qm</file>
