Added outbox "Direct Messages"
git-svn-id: http://qwit.googlecode.com/svn/trunk@49 067a171b-6953-0410-b330-3d32600bf046

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -291,6 +291,14 @@
          <string>Direct messages inbox</string>
         </attribute>
        </widget>
+       <widget class="QWidget" name="outboxTab" >
+        <attribute name="title" >
+         <string>Outbox</string>
+        </attribute>
+        <attribute name="toolTip" >
+         <string>Direct messages outbox</string>
+        </attribute>
+       </widget>
       </widget>
      </item>
      <item>
