Fixed/added icon for retweet button
git-svn-id: http://qwit.googlecode.com/svn/trunk@57 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -7,6 +7,7 @@
         <file>images/reload.png</file>
         <file>images/reply.png</file>
         <file>images/dms.png</file>
+        <file>images/rt.png</file>
         <file>translations/qwit_tr_TR.qm</file>
         <file>translations/qwit_ru_RU.qm</file>
         <file>translations/qwit_en_US.qm</file>
