Added options "Vertical align control"
git-svn-id: http://qwit.googlecode.com/svn/trunk@64 067a171b-6953-0410-b330-3d32600bf046

--- a/src/OptionsDialog.ui
+++ b/src/OptionsDialog.ui
@@ -152,6 +152,16 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QCheckBox" name="verticalControlCheckBox" >
+             <property name="text" >
+              <string>Vertical align control</string>
+             </property>
+             <property name="checked" >
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
          <item row="1" column="0" >
