Added italian translation: issue 46
git-svn-id: http://qwit.googlecode.com/svn/trunk@84 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -8,8 +8,11 @@
         <file>images/reply.png</file>
         <file>images/dms.png</file>
         <file>images/rt.png</file>
-        <file>translations/qwit_tr_TR.qm</file>
-        <file>translations/qwit_ru_RU.qm</file>
         <file>translations/qwit_en_US.qm</file>
+        <file>translations/qwit_es_ES.qm</file>
+        <file>translations/qwit_it_IT.qm</file>
+        <file>translations/qwit_pt_BR.qm</file>
+        <file>translations/qwit_ru_RU.qm</file>
+        <file>translations/qwit_tr_TR.qm</file>
     </qresource>
 </RCC>
