Changed position of tab buttons
git-svn-id: http://qwit.googlecode.com/svn/trunk@93 067a171b-6953-0410-b330-3d32600bf046

--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -226,7 +226,7 @@
         <string/>
        </property>
        <property name="tabPosition" >
-        <enum>QTabWidget::South</enum>
+        <enum>QTabWidget::West</enum>
        </property>
        <property name="currentIndex" >
         <number>0</number>
@@ -327,7 +327,6 @@
          </item>
         </layout>
        </widget>
-       
       </widget>
      </item>
      <item>
