--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -221,7 +221,37 @@
       </layout>
      </item>
      <item>
-      <widget class="QTabWidget" name="tabWidget" >
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <item>
+        <spacer name="horizontalSpacer">
+         <property name="orientation">
+          <enum>Qt::Horizontal</enum>
+         </property>
+         <property name="sizeHint" stdset="0">
+          <size>
+           <width>40</width>
+           <height>20</height>
+          </size>
+         </property>
+        </spacer>
+       </item>
+       <item>
+        <widget class="QToolButton" name="twitPicButton">
+         <property name="maximumSize">
+          <size>
+           <width>20</width>
+           <height>20</height>
+          </size>
+         </property>
+         <property name="text">
+          <string>pic</string>
+         </property>
+        </widget>
+       </item>
+      </layout>
+     </item>
+     <item>
+     <widget class="QTabWidget" name="tabWidget" >
        <property name="toolTip" >
         <string/>
        </property>
