Add an icon for the twitpic button
git-svn-id: http://qwit.googlecode.com/svn/trunk@107 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -8,6 +8,7 @@
         <file>images/reply.png</file>
         <file>images/dms.png</file>
         <file>images/rt.png</file>
+        <file>images/twitpic.png</file>
         <file>translations/qwit_en_US.qm</file>
         <file>translations/qwit_es_ES.qm</file>
         <file>translations/qwit_it_IT.qm</file>
