--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -221,41 +221,28 @@
       </layout>
      </item>
      <item>
-      <layout class="QHBoxLayout" name="horizontalLayout">
+      <layout class="QHBoxLayout" name="horizontalLayout" >
        <item>
-        <spacer name="horizontalSpacer">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>40</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="QToolButton" name="twitPicButton">
-         <property name="maximumSize">
+        <widget class="QToolButton" name="twitPicButton" >
+         <property name="maximumSize" >
           <size>
            <width>20</width>
            <height>20</height>
           </size>
          </property>
-         <property name="text">
-          <string></string>
+         <property name="text" >
+          <string/>
          </property>
-         <property name="icon">
-          <iconset resource="../qwit.qrc">
+         <property name="icon" >
+          <iconset resource="../qwit.qrc" >
            <normaloff>:/images/twitpic.png</normaloff>:/images/twitpic.png</iconset>
-          </property>
+         </property>
         </widget>
        </item>
       </layout>
      </item>
      <item>
-     <widget class="QTabWidget" name="tabWidget" >
+      <widget class="QTabWidget" name="tabWidget" >
        <property name="toolTip" >
         <string/>
        </property>
