Added Kazakh translation - thanks to Aslan Kokanbekov
git-svn-id: http://qwit.googlecode.com/svn/trunk@127 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -15,5 +15,6 @@
         <file>translations/qwit_pt_BR.qm</file>
         <file>translations/qwit_ru_RU.qm</file>
         <file>translations/qwit_tr_TR.qm</file>
+        <file>translations/qwit_kk_KZ.qm</file>
     </qresource>
 </RCC>
