--- a/src/OptionsDialog.ui
+++ b/src/OptionsDialog.ui
@@ -5,8 +5,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>293</width>
-    <height>609</height>
+    <width>339</width>
+    <height>618</height>
    </rect>
   </property>
   <property name="windowTitle" >
@@ -159,6 +159,13 @@
              </property>
              <property name="checked" >
               <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="placeTabsVerticallyCheckBox" >
+             <property name="text" >
+              <string>Place tabs vertically</string>
              </property>
             </widget>
            </item>
