--- a/qwit.qrc
+++ b/qwit.qrc
@@ -16,5 +16,6 @@
         <file>translations/qwit_ru_RU.qm</file>
         <file>translations/qwit_tr_TR.qm</file>
         <file>translations/qwit_kk_KZ.qm</file>
+        <file>translations/qwit_de_DE.qm</file>
     </qresource>
 </RCC>
