Fixed focus behavior (issue 68)
git-svn-id: http://qwit.googlecode.com/svn/trunk@172 067a171b-6953-0410-b330-3d32600bf046

--- a/src/OptionsDialog.ui
+++ b/src/OptionsDialog.ui
@@ -169,6 +169,13 @@
              </property>
             </widget>
            </item>
+           <item>
+            <widget class="QCheckBox" name="keepFocusAfterUpdateCheckBox" >
+             <property name="text" >
+              <string>Keep focus on the text field after status update</string>
+             </property>
+            </widget>
+           </item>
           </layout>
          </item>
          <item row="1" column="0" >
