--- a/src/OptionsDialog.ui
+++ b/src/OptionsDialog.ui
@@ -1,130 +1,131 @@
-<ui version="4.0" >
+<?xml version="1.0" encoding="UTF-8"?>
+<ui version="4.0">
  <class>OptionsDialog</class>
- <widget class="QDialog" name="OptionsDialog" >
-  <property name="geometry" >
+ <widget class="QDialog" name="OptionsDialog">
+  <property name="geometry">
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>339</width>
+    <width>350</width>
     <height>618</height>
    </rect>
   </property>
-  <property name="windowTitle" >
+  <property name="windowTitle">
    <string>Options</string>
   </property>
-  <layout class="QGridLayout" >
-   <item row="0" column="0" >
-    <layout class="QVBoxLayout" >
+  <layout class="QGridLayout">
+   <item row="0" column="0">
+    <layout class="QVBoxLayout">
      <item>
-      <widget class="QTabWidget" name="tabWidget" >
-       <property name="currentIndex" >
+      <widget class="QTabWidget" name="tabWidget">
+       <property name="currentIndex">
         <number>0</number>
        </property>
-       <widget class="QWidget" name="tab" >
-        <attribute name="title" >
+       <widget class="QWidget" name="tab">
+        <attribute name="title">
          <string>General</string>
         </attribute>
-        <layout class="QGridLayout" >
-         <item row="0" column="0" >
-          <layout class="QVBoxLayout" >
-           <property name="spacing" >
+        <layout class="QGridLayout">
+         <item row="0" column="0">
+          <layout class="QVBoxLayout">
+           <property name="spacing">
             <number>-1</number>
            </property>
            <item>
-            <widget class="QLabel" name="label_11" >
-             <property name="text" >
+            <widget class="QLabel" name="label_11">
+             <property name="text">
               <string>Greeting message:</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="greetingMessageLineEdit" />
+            <widget class="QLineEdit" name="greetingMessageLineEdit"/>
            </item>
            <item>
-            <widget class="QLabel" name="label_5" >
-             <property name="text" >
+            <widget class="QLabel" name="label_5">
+             <property name="text">
               <string>Service base URL:</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="serviceBaseURLLineEdit" />
+            <widget class="QLineEdit" name="serviceBaseURLLineEdit"/>
            </item>
            <item>
-            <widget class="QLabel" name="label_10" >
-             <property name="text" >
+            <widget class="QLabel" name="label_10">
+             <property name="text">
               <string>Service API URL:</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="serviceAPIURLLineEdit" />
+            <widget class="QLineEdit" name="serviceAPIURLLineEdit"/>
            </item>
            <item>
-            <widget class="QLabel" name="label_3" >
-             <property name="text" >
+            <widget class="QLabel" name="label_3">
+             <property name="text">
               <string>Update interval:</string>
              </property>
-             <property name="buddy" >
+             <property name="buddy">
               <cstring>intervalLineEdit</cstring>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="intervalLineEdit" />
+            <widget class="QLineEdit" name="intervalLineEdit"/>
            </item>
            <item>
-            <widget class="QLabel" name="label_4" >
-             <property name="text" >
+            <widget class="QLabel" name="label_4">
+             <property name="text">
               <string>Number of messages per page:</string>
              </property>
-             <property name="buddy" >
+             <property name="buddy">
               <cstring>intervalLineEdit</cstring>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="messagesPerPageLineEdit" />
+            <widget class="QLineEdit" name="messagesPerPageLineEdit"/>
            </item>
            <item>
-            <widget class="QLabel" name="label_12" >
-             <property name="text" >
+            <widget class="QLabel" name="label_12">
+             <property name="text">
               <string>Number of messages per tray:</string>
              </property>
-             <property name="buddy" >
+             <property name="buddy">
               <cstring>intervalLineEdit</cstring>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="messagesPerTrayLineEdit" />
+            <widget class="QLineEdit" name="messagesPerTrayLineEdit"/>
            </item>
            <item>
-            <widget class="QLabel" name="label_13" >
-             <property name="text" >
+            <widget class="QLabel" name="label_13">
+             <property name="text">
               <string>Retweeting tag:</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="retweetTagEdit" />
+            <widget class="QLineEdit" name="retweetTagEdit"/>
            </item>
            <item>
-            <widget class="QCheckBox" name="retweetAtEnd" >
-             <property name="text" >
+            <widget class="QCheckBox" name="retweetAtEnd">
+             <property name="text">
               <string>Display retweet tag after text instead of in front</string>
              </property>
             </widget>
            </item>
            <item>
-            <spacer name="verticalSpacer" >
-             <property name="orientation" >
+            <spacer name="verticalSpacer">
+             <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
-             <property name="sizeType" >
+             <property name="sizeType">
               <enum>QSizePolicy::Fixed</enum>
              </property>
-             <property name="sizeHint" stdset="0" >
+             <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>1</height>
@@ -133,57 +134,67 @@
             </spacer>
            </item>
            <item>
-            <widget class="QCheckBox" name="usernameUnderAvatarCheckBox" >
-             <property name="text" >
+            <widget class="QCheckBox" name="usernameUnderAvatarCheckBox">
+             <property name="text">
               <string>Username under avatar</string>
              </property>
-             <property name="checked" >
+             <property name="checked">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QCheckBox" name="updatesNotificationCheckBox" >
-             <property name="text" >
+            <widget class="QCheckBox" name="updatesNotificationCheckBox">
+             <property name="text">
               <string>Notify about updates</string>
              </property>
-             <property name="checked" >
+             <property name="checked">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QCheckBox" name="verticalControlCheckBox" >
-             <property name="text" >
+            <widget class="QCheckBox" name="verticalControlCheckBox">
+             <property name="text">
               <string>Place controls vertically</string>
              </property>
-             <property name="checked" >
+             <property name="checked">
               <bool>true</bool>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QCheckBox" name="placeTabsVerticallyCheckBox" >
-             <property name="text" >
+            <widget class="QCheckBox" name="placeTabsVerticallyCheckBox">
+             <property name="text">
               <string>Place tabs vertically</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QCheckBox" name="keepFocusAfterUpdateCheckBox" >
-             <property name="text" >
+            <widget class="QCheckBox" name="openUserProfileInBrowserCheckBox">
+             <property name="text">
+              <string>Open user profile in browser on username click</string>
+             </property>
+             <property name="checked">
+              <bool>true</bool>
+             </property>
+            </widget>
+           </item>
+           <item>
+            <widget class="QCheckBox" name="keepFocusAfterUpdateCheckBox">
+             <property name="text">
               <string>Keep focus on the text field after status update</string>
              </property>
             </widget>
            </item>
           </layout>
          </item>
-         <item row="1" column="0" >
+         <item row="1" column="0">
           <spacer>
-           <property name="orientation" >
+           <property name="orientation">
             <enum>Qt::Vertical</enum>
            </property>
-           <property name="sizeHint" stdset="0" >
+           <property name="sizeHint" stdset="0">
             <size>
              <width>20</width>
              <height>40</height>
@@ -193,89 +204,89 @@
          </item>
         </layout>
        </widget>
-       <widget class="QWidget" name="tab_2" >
-        <attribute name="title" >
+       <widget class="QWidget" name="tab_2">
+        <attribute name="title">
          <string>Connection</string>
         </attribute>
-        <layout class="QGridLayout" >
-         <item row="0" column="0" >
-          <layout class="QVBoxLayout" >
+        <layout class="QGridLayout">
+         <item row="0" column="0">
+          <layout class="QVBoxLayout">
            <item>
-            <widget class="QCheckBox" name="useProxyCheckBox" >
-             <property name="text" >
+            <widget class="QCheckBox" name="useProxyCheckBox">
+             <property name="text">
               <string>use proxy</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLabel" name="label_8" >
-             <property name="text" >
+            <widget class="QLabel" name="label_8">
+             <property name="text">
               <string>Proxy address:</string>
              </property>
-             <property name="buddy" >
+             <property name="buddy">
               <cstring>proxyAddressLineEdit</cstring>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="proxyAddressLineEdit" />
+            <widget class="QLineEdit" name="proxyAddressLineEdit"/>
            </item>
            <item>
-            <widget class="QLabel" name="label_9" >
-             <property name="text" >
+            <widget class="QLabel" name="label_9">
+             <property name="text">
               <string>Proxy port:</string>
              </property>
-             <property name="buddy" >
+             <property name="buddy">
               <cstring>proxyPortLineEdit</cstring>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="proxyPortLineEdit" />
+            <widget class="QLineEdit" name="proxyPortLineEdit"/>
            </item>
            <item>
-            <widget class="QLabel" name="label_6" >
-             <property name="text" >
+            <widget class="QLabel" name="label_6">
+             <property name="text">
               <string>Proxy username:</string>
              </property>
-             <property name="buddy" >
+             <property name="buddy">
               <cstring>proxyUsernameLineEdit</cstring>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="proxyUsernameLineEdit" />
+            <widget class="QLineEdit" name="proxyUsernameLineEdit"/>
            </item>
            <item>
-            <widget class="QLabel" name="label_7" >
-             <property name="text" >
+            <widget class="QLabel" name="label_7">
+             <property name="text">
               <string>Proxy password:</string>
              </property>
-             <property name="buddy" >
+             <property name="buddy">
               <cstring>proxyPasswordLineEdit</cstring>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="proxyPasswordLineEdit" >
-             <property name="echoMode" >
+            <widget class="QLineEdit" name="proxyPasswordLineEdit">
+             <property name="echoMode">
               <enum>QLineEdit::Password</enum>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QCheckBox" name="proxySavePasswordCheckBox" >
-             <property name="text" >
+            <widget class="QCheckBox" name="proxySavePasswordCheckBox">
+             <property name="text">
               <string>save proxy password</string>
              </property>
             </widget>
            </item>
            <item>
             <spacer>
-             <property name="orientation" >
+             <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
-             <property name="sizeHint" stdset="0" >
+             <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>40</height>
@@ -287,56 +298,56 @@
          </item>
         </layout>
        </widget>
-       <widget class="QWidget" name="tab_3" >
-        <attribute name="title" >
+       <widget class="QWidget" name="tab_3">
+        <attribute name="title">
          <string>Authentication</string>
         </attribute>
-        <layout class="QGridLayout" >
-         <item row="0" column="0" >
-          <layout class="QVBoxLayout" >
+        <layout class="QGridLayout">
+         <item row="0" column="0">
+          <layout class="QVBoxLayout">
            <item>
-            <widget class="QLabel" name="label" >
-             <property name="text" >
+            <widget class="QLabel" name="label">
+             <property name="text">
               <string>Username or email:</string>
              </property>
-             <property name="buddy" >
+             <property name="buddy">
               <cstring>usernameLineEdit</cstring>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="usernameLineEdit" />
+            <widget class="QLineEdit" name="usernameLineEdit"/>
            </item>
            <item>
-            <widget class="QLabel" name="label_2" >
-             <property name="text" >
+            <widget class="QLabel" name="label_2">
+             <property name="text">
               <string>Password:</string>
              </property>
-             <property name="buddy" >
+             <property name="buddy">
               <cstring>passwordLineEdit</cstring>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QLineEdit" name="passwordLineEdit" >
-             <property name="echoMode" >
+            <widget class="QLineEdit" name="passwordLineEdit">
+             <property name="echoMode">
               <enum>QLineEdit::Password</enum>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QCheckBox" name="savePasswordCheckBox" >
-             <property name="text" >
+            <widget class="QCheckBox" name="savePasswordCheckBox">
+             <property name="text">
               <string>save password</string>
              </property>
             </widget>
            </item>
            <item>
             <spacer>
-             <property name="orientation" >
+             <property name="orientation">
               <enum>Qt::Vertical</enum>
              </property>
-             <property name="sizeHint" stdset="0" >
+             <property name="sizeHint" stdset="0">
               <size>
                <width>20</width>
                <height>40</height>
@@ -351,15 +362,15 @@
       </widget>
      </item>
      <item>
-      <layout class="QVBoxLayout" >
+      <layout class="QVBoxLayout">
        <item>
-        <layout class="QHBoxLayout" >
+        <layout class="QHBoxLayout">
          <item>
           <spacer>
-           <property name="orientation" >
+           <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
-           <property name="sizeHint" stdset="0" >
+           <property name="sizeHint" stdset="0">
             <size>
              <width>40</width>
              <height>20</height>
@@ -368,17 +379,17 @@
           </spacer>
          </item>
          <item>
-          <layout class="QHBoxLayout" >
+          <layout class="QHBoxLayout">
            <item>
-            <widget class="QPushButton" name="savePushButton" >
-             <property name="text" >
+            <widget class="QPushButton" name="savePushButton">
+             <property name="text">
               <string>Save options</string>
              </property>
             </widget>
            </item>
            <item>
-            <widget class="QPushButton" name="resetPushButton" >
-             <property name="text" >
+            <widget class="QPushButton" name="resetPushButton">
+             <property name="text">
               <string>Reset options</string>
              </property>
             </widget>
@@ -387,10 +398,10 @@
          </item>
          <item>
           <spacer>
-           <property name="orientation" >
+           <property name="orientation">
             <enum>Qt::Horizontal</enum>
            </property>
-           <property name="sizeHint" stdset="0" >
+           <property name="sizeHint" stdset="0">
             <size>
              <width>40</width>
              <height>20</height>
@@ -402,10 +413,10 @@
        </item>
        <item>
         <spacer>
-         <property name="orientation" >
+         <property name="orientation">
           <enum>Qt::Vertical</enum>
          </property>
-         <property name="sizeHint" stdset="0" >
+         <property name="sizeHint" stdset="0">
           <size>
            <width>20</width>
            <height>40</height>
