Added Simplified Chinese translation by Caspar Zhang
git-svn-id: http://qwit.googlecode.com/svn/trunk@193 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -17,5 +17,6 @@
         <file>translations/qwit_tr_TR.qm</file>
         <file>translations/qwit_kk_KZ.qm</file>
         <file>translations/qwit_de_DE.qm</file>
+        <file>translations/qwit_zh_CN.qm</file>
     </qresource>
 </RCC>
