Added Finnish translation by Atte
git-svn-id: http://qwit.googlecode.com/svn/trunk@215 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -18,5 +18,6 @@
         <file>translations/qwit_kk_KZ.qm</file>
         <file>translations/qwit_de_DE.qm</file>
         <file>translations/qwit_zh_CN.qm</file>
+        <file>translations/qwit_fi_FI.qm</file>
     </qresource>
 </RCC>
