--- a/qwit.qrc
+++ b/qwit.qrc
@@ -15,13 +15,29 @@
         <file>images/unfollow.png</file>
         <file>images/destroy.png</file>
         <file>images/follow.png</file>
-        <file>translations/qwit_tr_TR.ts</file>
-        <file>translations/qwit_ru_RU.ts</file>
-        <file>translations/qwit_pt_BR.ts</file>
-        <file>translations/qwit_kk_KZ.ts</file>
-        <file>translations/qwit_it_IT.ts</file>
-        <file>translations/qwit_es_ES.ts</file>
-        <file>translations/qwit_en_US.ts</file>
         <file>images/qwitnewmessages.png</file>
+        <file>translations/qwit_it_IT.qm</file>
+        <file>translations/qwit_kk_KZ.qm</file>
+        <file>translations/qwit_pt_BR.qm</file>
+        <file>translations/qwit_ru_RU.qm</file>
+        <file>translations/qwit_tr_TR.qm</file>
+        <file>translations/qwit_zh_CN.qm</file>
+        <file>translations/qwit_de_DE.qm</file>
+        <file>translations/qwit_en_US.qm</file>
+        <file>translations/qwit_es_ES.qm</file>
+        <file>translations/qwit_fi_FI.qm</file>
+        <file>images/uiopme.png</file>
+        <file>images/unu.png</file>
+        <file>images/murlkz.png</file>
+        <file>images/countries/br.png</file>
+        <file>images/countries/cn.png</file>
+        <file>images/countries/de.png</file>
+        <file>images/countries/es.png</file>
+        <file>images/countries/fi.png</file>
+        <file>images/countries/it.png</file>
+        <file>images/countries/kz.png</file>
+        <file>images/countries/ru.png</file>
+        <file>images/countries/tr.png</file>
+        <file>images/countries/us.png</file>
     </qresource>
 </RCC>
