A quick way to enable or disable URL shortening (from the main window). Because sometimes, you don't want to shorten the link.
git-svn-id: http://qwit.googlecode.com/svn/trunk@260 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -15,6 +15,7 @@
         <file>images/unfollow.png</file>
         <file>images/destroy.png</file>
         <file>images/follow.png</file>
+        <file>images/shorten.png</file>
         <file>images/qwitnewmessages.png</file>
         <file>translations/qwit_it_IT.qm</file>
         <file>translations/qwit_kk_KZ.qm</file>
