--- a/src/MainWindow.ui
+++ b/src/MainWindow.ui
@@ -25,6 +25,35 @@
        <item>
         <layout class="QVBoxLayout" name="toolbuttonsVerticalLayout">
          <item>
+          <widget class="QToolButton" name="urlShorteningEnabledButton">
+           <property name="maximumSize">
+            <size>
+             <width>20</width>
+             <height>20</height>
+            </size>
+           </property>
+           <property name="text">
+            <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="../qwit.qrc">
+             <normaloff>:/images/shorten.png</normaloff>:/images/shorten.png</iconset>
+           </property>
+           <property name="checkable">
+            <bool>true</bool>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+           <property name="toolButtonStyle">
+            <enum>Qt::ToolButtonIconOnly</enum>
+           </property>
+           <property name="autoRaise">
+            <bool>true</bool>
+           </property>
+          </widget>
+         </item>
+         <item>
           <widget class="QToolButton" name="twitPicButton">
            <property name="maximumSize">
             <size>
