Fixed translation to non-English languages, cleared and improved language list
git-svn-id: http://qwit.googlecode.com/svn/trunk@273 067a171b-6953-0410-b330-3d32600bf046

--- a/qwit.qrc
+++ b/qwit.qrc
@@ -43,5 +43,6 @@
         <file>images/countries/ru.png</file>
         <file>images/countries/tr.png</file>
         <file>images/countries/us.png</file>
+        <file>images/google.png</file>
     </qresource>
 </RCC>
